src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Amount_on_Hold__c</fullName>
        <label>Amount on Hold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Requirements__c</fullName>
        <description>This field is used for the MEC process... Requirements used by Contract/Credentialing to confirm requirements.</description>
        <label>Approval Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_By2__c</fullName>
        <description>2nd approval,typically Dr. Pilgrim&apos;s office.</description>
        <label>Approved By2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <description>Request Approved by</description>
        <label>Approved By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterConnect_Comment_Id__c</fullName>
        <description>A hidden field used by ChatterExtend. This stores FB/TW post Id so that the task can be accosiated with some post while adding comments to the description field.</description>
        <label>ChatterConnect Comment Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Letter_Additions__c</fullName>
        <description>Used to indicate any additional cover letter information.</description>
        <label>Cover Letter Additions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentShift__c</fullName>
        <label>Current Shift Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Rate__c</fullName>
        <description>Tracks the current Pay Rate</description>
        <label>Current Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decline_Reason_Detail__c</fullName>
        <label>Decline Reason Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Not qualified for intended facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested in intended facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referring to another recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider non-responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exec_Private_Comment__c</fullName>
        <description>task 254 text area that can only be seen by RVP, RMO, or the Executive role.</description>
        <label>Executive Private Comment</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for reoccuring task create</description>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Create_Date__c</fullName>
        <label>Legacy Create</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mode_of_Transmission__c</fullName>
        <label>Mode of Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Deliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post to Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewShift__c</fullName>
        <label>New Shift Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Rate__c</fullName>
        <description>New Pay Rate</description>
        <label>New Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outbound_Mailing_Instructions__c</fullName>
        <description>Use to indicate mailing instructions.</description>
        <label>Outbound Mailing Instructions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outgoing_Airbill__c</fullName>
        <description>Used to track outbound airbill number</description>
        <label>Outgoing Airbill #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Fill_Application__c</fullName>
        <description>Use to indicate if the the application should be completed for the provider</description>
        <label>Complete App for Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Fill App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Pre-Fill App</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Type__c</fullName>
        <description>Used to catagorize task for reporting:</description>
        <label>Reason Type</label>
        <picklist>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Approved__c</fullName>
        <description>Use for Application Requests.</description>
        <label>Request Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Airbill__c</fullName>
        <description>Used to track the return airbill number.</description>
        <label>Return Airbill #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Mailing_Instructions__c</fullName>
        <description>Return Mailing Instructions</description>
        <label>Return Mailing Instructions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeriesAccess__c</fullName>
        <formula>IF ( IsRecurring__c ,
IMAGE(&quot;/img/recurring_activity.gif&quot;, &quot;Recurring&quot;)
&amp; &quot; &quot; &amp; 
HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000rcXQ&amp;eid=&quot;&amp; TaskRecurrenceid__c ,
&quot;Delete Series&quot;,&quot;_top&quot;) &amp; &quot; &quot; &amp;
HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b30000000s8A8&amp;eid=&quot;&amp; TaskRecurrenceid__c  ,
&quot;Change Series Owner&quot;,&quot;_top&quot;),
&quot;Individual Task&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskRecurrenceid__c</fullName>
        <description>used for recurring task create.</description>
        <label>TaskRecurrenceid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskSeriesDescribe__c</fullName>
        <description>needed for task recurrence create</description>
        <label>Series Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>A2_My_Upcoming_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Events</label>
    </listViews>
    <listViews>
        <fullName>MyActivitiesallopencompleted</fullName>
        <columns>TASK.CREATED_DATE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>TASK.TYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities - All opened &amp; completed</label>
    </listViews>
    <listViews>
        <fullName>MyCompletedTasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My Completed Tasks</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.RECORDTYPE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <filterScope>Delegated</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>My Team&apos;s Activities</label>
        <sharedTo>
            <roleAndSubordinates>Administration</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PFA_Reactivations</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>PFA Reactivation</value>
        </filters>
        <label>PFA Reactivations</label>
        <sharedTo>
            <group>DataQuality</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Past_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Events</label>
    </listViews>
    <listViews>
        <fullName>Potential_Duplicate_Accounts</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Potential duplicate Account</value>
        </filters>
        <label>Potential Duplicate Accounts</label>
        <sharedTo>
            <group>SFDCAdminTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Potential_Duplicate_Contact</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Potential duplicate contact</value>
        </filters>
        <label>Potential Duplicate Contact</label>
        <sharedTo>
            <group>SFDCAdminTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Potential_Duplicate_Lead</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Potential duplicate lead</value>
        </filters>
        <label>Potential Duplicate Lead</label>
        <sharedTo>
            <group>SFDCAdminTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SF_Guidelines_for_Use</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Guidelines for Use</value>
        </filters>
        <label>SF Guidelines for Use</label>
        <sharedTo>
            <group>DataQuality</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TSG_Portal</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>contains</operation>
            <value>Profile update</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>TSG Portal - My Profile Update</label>
        <sharedTo>
            <group>DataQuality</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_and_Overdue</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Today &amp; Overdue</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>soat__A1_My_Open_Tasks</fullName>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Tasks</label>
    </listViews>
</CustomObject>